config/k8s/deploy-backend-radiodiagnosis-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: radiodiagnosis
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        build-id: "BUILD_ID_PLACEHOLDER"
    spec:
      containers:
        - name: backend
          image: docker.io/ardianhermawan17/backend-radiodiagnosis:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5001
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 5001
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /
              port: 5001
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: radiodiagnosis
spec:
  selector:
    app: backend
  ports:
    - port: 5001
      targetPort: 5001
