config/k8s/statefulsets-postgres-radiodiagnosis-k8s.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-headless
  namespace: radiodiagnosis
  labels:
    app: postgres
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - name: tcp
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: radiodiagnosis
  labels:
    app: postgres
spec:
  serviceName: postgres-headless
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: postgres
          image: postgres:18
#          image: postgres:15
          resources:
            requests:
              cpu: "250m"
              memory: "1Gi"
            limits:
              cpu: "1"
              memory: "2Gi"
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 20
            failureThreshold: 3
#      volumes:
#        - name: pgdata
#          persistentVolumeClaim:
#            claimName: postgres-pvc
  volumeClaimTemplates:
    - metadata:
        name: pgdata
        namespace: radiodiagnosis
        labels:
          app: postgres
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 2Gi
        storageClassName: local-path
---
# Menggunakan nodeport biar bisa akses database
apiVersion: v1
kind: Service
metadata:
  name: postgres-nodeport
  namespace: radiodiagnosis
  labels:
    app: postgres
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      nodePort: 30432
