config/k8s/ingress-backend-radiodiagnosis-k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-radiodiagnosis
  namespace: radiodiagnosis
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: backend.radiodiagnosis.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5001
  tls:
    - hosts:
        - backend.radiodiagnosis.id
      secretName: backend-radiodiagnosis-tls
